--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -67,43 +67,44 @@ p {
   .header-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    padding: 0px 0px 0px 10px;
   }
 
   .header-wallpaper-container {
-    width: 150px;
     border-radius: 20px;
     height: 250px;
-    margin: 10px 0px 0px 20px;
+    margin: 5px 0px 0px 5px;
+    padding: 0px 0px 0px 60px;
   }
 
   h1 {
     font-size: 190%;
     width: 150px;
-    margin: 5% 0% 0% 10%;
+    margin: 5% 3% 0% 5%;
   }
 
   h3 {
     font-size: 70%;
-    margin: -2% 0% 0% 10%;
+    margin: 4% 0% 0% 5%;
   }
 
   p {
     display: flex;
     flex-direction: row;
-    margin: 55% 10% 10% 5%;
+    align-items: center;
+    margin: 5% 5% 10% 5%;
     font-size: 70%;
     color: hsl(0, 0%, 100%);
   }
 
   .templates-literals {
-    margin: 0% 0% 10% 0%;
-    font-size: 100%;
+    font-size: 210%;
     color: rgb(245, 255, 101);
   }
 
   .names-container {
-    width: 50%;
+    margin: 0% 0% 0% 0%;
     background-color: #20151d;
     -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
     -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
