--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -15,14 +15,14 @@
 
 button {
   margin: 0% 1% 0% 1%;
-  width: 150px;
+  width: 260px;
   background-color: #2b2e4a;
   border: none;
   color: #e84545;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 25px;
   -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.07);
   -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.07);
   box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.07);
@@ -35,11 +35,11 @@ button:hover {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 25px;
   -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.07);
   -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.07);
   box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.07);
-  transition: .3s;
+  transition: .3s ease;
 }
 
 
