--- a/src/styles/components/whatido.css
+++ b/src/styles/components/whatido.css
@@ -4,6 +4,20 @@
   background-color: #e84545;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   color: #181a2e;
+  }
+.skills-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  height: auto;
+  border: 1px solid #181a2e;
+  border-radius: 15px;
+  margin: 10px 10px 10px 10px;
+}
+
+h2 {
+  margin: 0% 0% 0% 0%;
 }
