--- a/src/styles/components/about.css
+++ b/src/styles/components/about.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 .description {
-  margin: 15px 25px 12px 25px;
+  margin: 15px 55px 12px 55px;
   padding: 0px;
   text-align: justify;
 }
@@ -34,7 +34,8 @@ h2 {
 @media screen and (max-width: 600px) {
 
   .about-container {
-    margin: 30px 0px 40px 0px;
+    margin: 1px 0px 40px 0px;
+    padding: 30px 0px 30px 0px;
     width: 100%;
     background-color: #181a2e;
     display: flex;
