--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -7,7 +7,7 @@
   width: 460px;
   height: 460px;
   margin: 2% 0% 0% 3%;
-  background: url('../../images/IMG_3800.webp') no-repeat;
+  background: url('../../images/IMG_3800.jpg') no-repeat;
   background-size: cover;
   position: relative;
   background-position: center;
