--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -44,9 +44,17 @@ button:hover {
 
 
 @media screen and (max-width: 600px) {
+  .navbar-container {
+    width: 100%;
+    background-color: #53354a;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: #e84545;
+  }
   button {
     margin: 2% 0.5% 2% 0.5%;
-    width: 90px;
+    width: 100%;
     padding: 5px 15px;
     text-align: center;
     font-size: 10px;
