--- a/src/styles/components/whatido.css
+++ b/src/styles/components/whatido.css
@@ -1,23 +1,348 @@
 .whatido-container {
+  display: flex;
   margin: 30px 0px 30px 0px;
   width: 100%;
-  background-color: #e84545;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   color: #181a2e;
   }
-.skills-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 30%;
-  height: auto;
-  border: 1px solid #181a2e;
-  border-radius: 15px;
-  margin: 10px 10px 10px 10px;
-}
 
-h2 {
-  margin: 0% 0% 0% 0%;
-}
+  .skills-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 400px;
+  border: 0px;
+  border-radius: 15px;
+  margin: 10px 0px 10px 50px;
+  background-color: #000000bb;
+  padding: 10px 0px 10px 0px;
+  }
+
+  .foreground {
+    filter: blur(8px);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  h2 {
+    color: whitesmoke;
+    margin: 0% 0% 0% 5%;
+  }
+
+  .bootstrap-container {
+    width: 210px;
+    height: 50px;
+    background: url('../../images/bootstrap.png') no-repeat;
+    background-size: 200px auto;
+    background-position: contain;
+    transition: 1s;
+    position: relative;
+  }
+
+  .css-container {
+    width: 50px;
+    height: 60px;
+    background: url('../../images/css.png') no-repeat;
+    background-size: 50px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+    z-index: 2;
+  }
+
+  .gatsby-container {
+    width: 150px;
+    height: 40px;
+    background: url('../../images/gatsbyjs.png') no-repeat;
+    background-size: 150px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+    z-index: 2;
+  }
+
+  .github-container {
+    width: 100px;
+    height: 60px;
+    background: url('../../images/GitHub-Logo.png') no-repeat;
+    background-size: 100px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+  }
+
+  .google-cloud-container {
+    width: 220px;
+    height: 80px;
+    background: url('../../images/Google-Cloud-Logo.png') no-repeat;
+    background-size: 200px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+    margin: 0px 0px 40px 20px;
+  }
+
+  .graphQL-container {
+    width: 200px;
+    height: 60px;
+    background: url('../../images/graphQL.png') no-repeat;
+    background-size: 200px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+  }
+
+  .html-container {
+    width: 50px;
+    height: 60px;
+    background: url('../../images/html.png') no-repeat;
+    background-size: 50px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+  }
+
+  .java-container {
+    width: 200px;
+    height: 130px;
+    background: url('../../images/java-logo.png') no-repeat;
+    background-size: 200px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+  }
+
+  .javascript-container {
+    width: 65px;
+    height: 65px;
+    background: url('../../images/javaScript-logo.png') no-repeat;
+    background-size: 65px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+  }
+
+  .mongodb-container {
+    width: 210px;
+    height: 85px;
+    background: url('../../images/mongodb.png') no-repeat;
+    background-size: 240px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+    margin: 0px 0px 40px 0px;
+  }
+
+  .node-container {
+    width: 110px;
+    height: 65px;
+    background: url('../../images/node.png') no-repeat;
+    background-size: 100px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+    margin: 0px 0px 0px 10px;
+  }
+
+  .react-container {
+    width: 71px;
+    height: 65px;
+    background: url('../../images/react.png') no-repeat;
+    background-size: 70px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+    margin: 0px -15px 0px 0px;
+  }
+
+  .sql-container {
+    width: 120px;
+    height: 70px;
+    background: url('../../images/sqlserver.png') no-repeat;
+    background-size: 120px auto;
+    position: relative;
+    background-position: contain;
+    transition: 1s;
+  }
+
+  @media screen and (max-width: 600px) {
+
+    h2 {
+      color: whitesmoke;
+      margin: 0% -50px 0% 5%;
+      font-size: 290%
+    }
+
+    .whatido-container {
+      display: flex;
+      margin: 1px 0px 15px 0px;
+      width: 90%;
+        color: #181a2e;
+        margin: 1px -5px 0px 3px;
+      }
+      .skills-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 600px;
+        margin: 0px 0px 300px 0px;
+        padding: 10px 10px 10px 10px;
+        background-color: #000000bb;
+        padding: 10px 0px 10px 0px;
+        -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
+        -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
+        box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.459);
+        }
+
+        .foreground {
+          filter: blur(8px);
+          position: absolute;
+          width: 80%;
+          height: 100%;
+        }
+
+
+        .bootstrap-container {
+          width: 110px;
+          height: 50px;
+          background: url('../../images/bootstrap.png') no-repeat;
+          background-size: 100px auto;
+          background-position: contain;
+          transition: 1s;
+          position: relative;
+        }
+
+        .css-container {
+          width: 30px;
+          height: 50px;
+          background: url('../../images/css.png') no-repeat;
+          background-size: 30px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          z-index: 2;
+        }
+
+        .gatsby-container {
+          width: 90px;
+          height: 40px;
+          background: url('../../images/gatsbyjs.png') no-repeat;
+          background-size: 90px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          z-index: 2;
+        }
+
+        .github-container {
+          width: 70px;
+          height: 60px;
+          background: url('../../images/GitHub-Logo.png') no-repeat;
+          background-size: 60px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+        }
+
+        .google-cloud-container {
+          width: 120px;
+          height: 80px;
+          background: url('../../images/Google-Cloud-Logo.png') no-repeat;
+          background-size: 120px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          margin: 0px 0px 40px 20px;
+        }
+
+        .graphQL-container {
+          width: 100px;
+          height: 60px;
+          background: url('../../images/graphQL.png') no-repeat;
+          background-size: 100px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+        }
+
+        .html-container {
+          width: 30px;
+          height: 60px;
+          background: url('../../images/html.png') no-repeat;
+          background-size: 30px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+        }
+
+        .java-container {
+          width: 100px;
+          height: 120px;
+          background: url('../../images/java-logo.png') no-repeat;
+          background-size: 100px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+        }
+
+        .javascript-container {
+          width: 35px;
+          height: 35px;
+          background: url('../../images/javaScript-logo.png') no-repeat;
+          background-size: 35px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          margin: 0px 0px 0px 10px;
+        }
+
+        .mongodb-container {
+          width: 118px;
+          height: 105px;
+          background: url('../../images/mongodb.png') no-repeat;
+          background-size: 140px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          margin: 0px 0px 40px 0px;
+        }
+
+        .node-container {
+          width: 75px;
+          height: 50px;
+          background: url('../../images/node.png') no-repeat;
+          background-size: 75px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          margin: 0px 0px 0px 10px;
+        }
+
+        .react-container {
+          width: 40px;
+          height: 40px;
+          background: url('../../images/react.png') no-repeat;
+          background-size: 40px auto;
+          position: relative;
+          background-position: contain;
+          transition: 1s;
+          margin: 0px 5px 0px 0px;
+        }
+
+      .sql-container {
+        width: 90px;
+        height: 70px;
+        background: url('../../images/sqlserver.png') no-repeat;
+        background-size: 90px auto;
+        position: relative;
+        background-position: contain;
+        transition: 1s;
+      }
+      }
