--- a/src/styles/components/whatido.css
+++ b/src/styles/components/whatido.css
@@ -281,7 +281,7 @@
         .java-container {
           width: 100px;
           height: 120px;
-          background: url('../../images/Java-logo.png') no-repeat;
+          background: url('../../images/java-logo.png') no-repeat;
           background-size: 100px auto;
           position: relative;
           background-position: contain;
@@ -291,7 +291,7 @@
         .javascript-container {
           width: 35px;
           height: 35px;
-          background: url('../../images/JavaScript-logo.png') no-repeat;
+          background: url('../../images/javaScript-logo.png') no-repeat;
           background-size: 35px auto;
           position: relative;
           background-position: contain;
