--- a/src/styles/components/whatido.css
+++ b/src/styles/components/whatido.css
@@ -104,7 +104,7 @@
     transition: 1s;
   }
 
-  .java-container {
+/*   .java-container {
     width: 200px;
     height: 130px;
     background: url('../../images/java-logo.png') no-repeat;
@@ -113,6 +113,7 @@
     background-position: contain;
     transition: 1s;
   }
+  */
 
   .javascript-container {
     width: 65px;
