--- a/src/styles/components/whatido.css
+++ b/src/styles/components/whatido.css
@@ -104,7 +104,7 @@
     transition: 1s;
   }
 
-/*   .java-container {
+  .java-container {
     width: 200px;
     height: 130px;
     background: url('../../images/java-logo.png') no-repeat;
@@ -113,12 +113,11 @@
     background-position: contain;
     transition: 1s;
   }
-  */
 
   .javascript-container {
     width: 65px;
     height: 65px;
-    background: url('../../images/javaScript-logo.png') no-repeat;
+    background: url("../../images/javaScriptlogo.png") no-repeat;
     background-size: 65px auto;
     position: relative;
     background-position: contain;
@@ -292,7 +291,7 @@
         .javascript-container {
           width: 35px;
           height: 35px;
-          background: url('../../images/javaScript-logo.png') no-repeat;
+          background: url('../../images/javaScriptlogo.png') no-repeat;
           background-size: 35px auto;
           position: relative;
           background-position: contain;
