--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,39 @@ body {
   animation: gradient 15s ease infinite;
   }
 
+  .btn-modal-container {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+    height: 20%;
+  }
+
+  .btn-modal-container button {
+    border: none;
+    width: 120px;
+    height: 40px;
+    font-family: 'Roboto Condensed',
+      sans-serif;
+    margin: 0% 1% 0% 1%;
+    background-color: #2b2e4a;
+    color: #e84545;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.548);
+    -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.548);
+    box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.548);
+    transition: .2s;
+  }
+
+  .btn-modal-container button:hover {
+    color: #2b2e4a;
+    background-color: #e84545;
+    text-decoration: none;
+  }
+
   @keyframes gradient {
     0% {
       background-position: 0% 50%;
