--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,12 +1,19 @@
 .header-container {
+  align-items: center;
+  align-content: space-between;
   display: flex;
   flex-direction: row;
+  height: 100%;
+  justify-content: space-around;
+  margin: 0 0 0 0;
+  padding: 2% 0% 0% 0%;
+  width: 100%;
 }
 
 .header-wallpaper-container {
   width: 460px;
   height: 460px;
-  margin: 2% 0% 0% 3%;
+  margin: 0%;
   background: url('../../images/IMG_3800.jpg') no-repeat;
   background-size: cover;
   position: relative;
@@ -18,35 +25,6 @@
   transition: 1s;
 }
 
-.header-wallpaper-container:hover {
-  width: 475px;
-  height: 475px;
-  margin: 2% 0% 0% 3%;
-  transition-timing-function: ease;
-}
-
-h1 {
-  margin: 10% 0% 0% 5%;
-  width: 100%;
-  font-size: 450%;
-  color: hsl(0, 0%, 100%);
-}
-
-h3 {
-  margin: 0% 10% 0% 5%;
-  width: 100%;
-  font-size: 200%;
-  color: hsla(208, 100%, 97%, 0.733);
-}
-
-p {
-  display: flex;
-  flex-direction: row;
-  margin: 15% 10% 5% 5%;
-  font-size: 200%;
-  color: hsl(0, 0%, 100%);
-}
-
 .templates-literals {
   margin: 0% 0% 0% 0%;
   font-size: 100%;
@@ -55,12 +33,41 @@ p {
 
 .names-container {
   width: 63%;
-  background-color: #20151d;
+  background-color: #334257;
   -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
   box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.459);
-  margin: 3% 3% 2% 3%;
 }
+
+.header-wallpaper-container:hover {
+  width: 475px;
+  height: 475px;
+  margin: 0%;
+  transition-timing-function: ease;
+}
+
+h1 {
+  margin: 0%;
+  width: 100%;
+  font-size: 450%;
+  color: hsl(0, 0%, 100%);
+}
+
+h3 {
+  margin: 0%;
+  width: 100%;
+  font-size: 100%;
+  color: hsla(208, 100%, 97%, 0.733);
+}
+
+p {
+  display: flex;
+  flex-direction: row;
+  margin: 0%;
+  font-size: 200%;
+  color: #548CA8;
+}
+
 
 
 @media screen and (max-width: 600px) {
@@ -82,19 +89,19 @@ p {
   h1 {
     font-size: 190%;
     width: 150px;
-    margin: 5% 3% 0% 5%;
+    margin: 0%;
   }
 
   h3 {
     font-size: 70%;
-    margin: 4% 0% 0% 5%;
+    margin: 0%;
   }
 
   p {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 5% 5% 10% 5%;
+    margin: 0%;
     font-size: 70%;
     color: hsl(0, 0%, 100%);
   }
@@ -110,6 +117,6 @@ p {
     -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
     -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
     box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.459);
-    margin: 3% 5% 2% 5%;
+    margin: 0%;
   }
 }
