--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,56 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto Condensed',
-    sans-serif;
-  background: linear-gradient(-45deg, #e84545, #2b2e4a, #903749, #53354a);
+  font-family: "Roboto Condensed", sans-serif;
+  background: #ECE9E6;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #334257, #476072);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #334257, #476072); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  }
-
-  .btn-modal-container {
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    justify-content: center;
-    width: 100%;
-    height: 20%;
-  }
-
-  .btn-modal-container button {
-    border: none;
-    width: 120px;
-    height: 40px;
-    font-family: 'Roboto Condensed',
-      sans-serif;
-    margin: 0% 1% 0% 1%;
-    background-color: #2b2e4a;
-    color: #e84545;
-    text-align: center;
-    text-decoration: none;
-    font-size: 15px;
-    -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.548);
-    -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.548);
-    box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.548);
-    transition: .2s;
-  }
-
-  .btn-modal-container button:hover {
-    color: #2b2e4a;
-    background-color: #e84545;
-    text-decoration: none;
-  }
-
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-
-    50% {
-      background-position: 100% 50%;
-    }
-
-    100% {
-      background-position: 0% 50%;
-    }
 }
