--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,49 +1,13 @@
+
 .header-container {
   align-items: center;
   align-content: space-between;
   display: flex;
   flex-direction: row;
   height: 100%;
-  justify-content: space-around;
   margin: 0 0 0 0;
   padding: 2% 0% 0% 0%;
-  width: 100%;
-}
-
-.header-wallpaper-container {
-  width: 460px;
-  height: 460px;
-  margin: 0%;
-  background: url('../../images/IMG_3800.jpg') no-repeat;
-  background-size: cover;
-  position: relative;
-  background-position: center;
-  border-radius: 100%;
-  -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
-  box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.459);
-  transition: 1s;
-}
-
-.templates-literals {
-  margin: 0% 0% 0% 0%;
-  font-size: 100%;
-  color: rgb(245, 255, 101);
-}
-
-.names-container {
-  width: 63%;
-  background-color: #334257;
-  -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
-  box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.459);
-}
-
-.header-wallpaper-container:hover {
-  width: 475px;
-  height: 475px;
-  margin: 0%;
-  transition-timing-function: ease;
+  width: 100vw;
 }
 
 h1 {
@@ -53,7 +17,23 @@ h1 {
   color: hsl(0, 0%, 100%);
 }
 
-h3 {
+h2 {
+  margin: 0%;
+  width: 100%;
+  font-size: 100%;
+  color: hsla(208, 100%, 97%, 0.733);
+}
+
+h2.role-1 {
+  font-family: 'Grape Nuts', cursive;
+  margin: 0%;
+  width: 100%;
+  font-size: 100%;
+  color: hsla(208, 100%, 97%, 0.733);
+}
+
+h2.role-2 {
+  font-family: 'Grape Nuts', cursive;
   margin: 0%;
   width: 100%;
   font-size: 100%;
@@ -66,57 +46,4 @@ p {
   margin: 0%;
   font-size: 200%;
   color: #548CA8;
-}
-
-
-
-@media screen and (max-width: 600px) {
-
-  .header-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 0px 0px 0px 10px;
-  }
-
-  .header-wallpaper-container {
-    border-radius: 20px;
-    height: 250px;
-    margin: 5px 0px 0px 5px;
-    padding: 0px 0px 0px 60px;
-  }
-
-  h1 {
-    font-size: 190%;
-    width: 150px;
-    margin: 0%;
-  }
-
-  h3 {
-    font-size: 70%;
-    margin: 0%;
-  }
-
-  p {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0%;
-    font-size: 70%;
-    color: hsl(0, 0%, 100%);
-  }
-
-  .templates-literals {
-    font-size: 210%;
-    color: rgb(245, 255, 101);
-  }
-
-  .names-container {
-    margin: 0% 0% 0% 0%;
-    background-color: #20151d;
-    -webkit-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.055);
-    box-shadow: -11px 12px 5px -2px rgba(0, 0, 0, 0.459);
-    margin: 0%;
-  }
 }
