--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Roboto:wght@100&display=swap');
+
 body {
+  background: #112031;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  background: #ECE9E6;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #334257, #476072);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #334257, #476072); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
 }
